--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,3 +4,35 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.container{
+    width: 1400px;
+    margin: auto;
+}
+
+.row{
+    display: flex;
+    column-gap: 4rem;
+
+}
+
+.image{
+    width: 100%;
+
+    img{
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
+footer{
+    background-color: aquamarine;
+    height: 50px;
+    margin-top: 2rem;
+}
+
+header{
+    background-color: aquamarine;
+    height: 50px;
+    margin-bottom: 2rem;
+}
